typescript/checker/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts.stderr
error: TS2365 {
    span: Span {
        lo: BytePos(
            248,
        ),
        hi: BytePos(
            261,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts:11:10
   |
11 | var r1 = undefined + a;
   |          ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            272,
        ),
        hi: BytePos(
            285,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts:12:10
   |
12 | var r2 = undefined + b;
   |          ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            296,
        ),
        hi: BytePos(
            309,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts:13:10
   |
13 | var r3 = undefined + c;
   |          ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            320,
        ),
        hi: BytePos(
            333,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts:14:10
   |
14 | var r4 = a + undefined;
   |          ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            344,
        ),
        hi: BytePos(
            357,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts:15:10
   |
15 | var r5 = b + undefined;
   |          ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            368,
        ),
        hi: BytePos(
            381,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts:16:10
   |
16 | var r6 = undefined + c;
   |          ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            408,
        ),
        hi: BytePos(
            421,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts:19:10
   |
19 | var r7 = undefined + d;
   |          ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            432,
        ),
        hi: BytePos(
            448,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts:20:10
   |
20 | var r8 = undefined + true;
   |          ^^^^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            459,
        ),
        hi: BytePos(
            480,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts:21:10
   |
21 | var r9 = undefined + { a: '' };
   |          ^^^^^^^^^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            492,
        ),
        hi: BytePos(
            509,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts:22:11
   |
22 | var r10 = undefined + foo();
   |           ^^^^^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            521,
        ),
        hi: BytePos(
            544,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts:23:11
   |
23 | var r11 = undefined + (() => { });
   |           ^^^^^^^^^^^^^^^^^^^^^^^

